--- a/code.html
+++ b/code.html
@@ -5,22 +5,40 @@
     <meta charset="utf-8" />
     <script src="https://cdn.firebase.com/v0/firebase.js"></script>
     <script src="codemirror/lib/codemirror.js"></script>
-    <script src="codemirror/mode/javascript/javascript.js"></script>
-    <script src="codemirror/mode/python/python.js"></script>
     <script src="codemirror/mode/clike/clike.js"></script>
-    <script src="codemirror/mode/ruby/ruby.js"></script>
     <script src="codemirror/mode/php/php.js"></script>
+    <script src="codemirror/mode/python/python.js"></script>
+    <script src="codemirror/mode/ruby/ruby.js"></script>
     <link rel="stylesheet" href="codemirror/lib/codemirror.css" />
     <script src="firepad.js"></script>
+    <style>
+        .cm-s-pad {
+            background-color:#222;
+            color:#FFF;
+        }
+        .firepad {
+            height:600px;
+        }
+        .firepadContainer {
+            width:40%;
+            display:inline-block;
+        }
+        #firepad1 {
+            margin-left:5%;
+        }
+        #firepad2 {
+            margin-left:10%;
+        }
+    </style>
     <link rel="stylesheet" href="firepad.css" />
 </head>
 <body style="background-color:black;">
-    <div id="firepad1" style="width:40%;display:inline-block;margin-left:5%"></div>
-    <div id="firepad2" style="width:40%;display:inline-block;margin-left:10%"></div>
+    <div id="firepad1" class="firepadContainer"></div>
+    <div id="firepad2" class="firepadContainer"></div>
     <script>
         var gameNum = getParam('game');
         if (!gameNum) {
-            document.location.href = "/";
+            document.location.href = "index.html";
         }
         var f = new Firebase('https://codebattle.firebaseio.com/games/game'+gameNum);
         var player1, codeMirror1, codeMirror2, firepad1, firepad2;
@@ -32,12 +50,14 @@
             var currPlayerFormat = {
                 lineNumbers: true,
                 mode: language,
+                theme: 'pad',
                 autofocus: true
             };
             var otherPlayerFormat = {
                 lineNumbers: true,
                 mode: language,
-                readOnly: "nocursor"
+                theme: 'pad',
+                readOnly: 'nocursor'
             };
             if (!playerCount || playerCount == 0) {
                 player1 = true;
