--- a/game.html
+++ b/game.html
@@ -14,9 +14,9 @@
     <script src="codemirror/mode/python/python.js"></script>
     <script src="codemirror/mode/ruby/ruby.js"></script>
     <link rel="stylesheet" href="codemirror/lib/codemirror.css" />
-    <script src="firepad.js"></script>
+    <script src="js/firepad.js"></script>
   	<link rel="stylesheet" href="css/foundation.css" />
-    <link rel="stylesheet" href="firepad.css" />
+    <link rel="stylesheet" href="css/firepad.css" />
   	<link rel="stylesheet" href="css/game.css" />
     <script src="js/fpsync.js"></script>
 
