--- a/game.html
+++ b/game.html
@@ -3,9 +3,9 @@
 <!--[if gt IE 8]><!--> <html class="no-js" lang="en" > <!--<![endif]-->
 
 <head>
-		<meta charset="utf-8">
-  		<meta name="viewport" content="width=device-width">
-  	<title>CodeBattle </title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <title>CodeBattle </title>
     <meta charset="utf-8" />
     <script src="https://cdn.firebase.com/v0/firebase.js"></script>
     <script src="codemirror/lib/codemirror.js"></script>
@@ -15,19 +15,18 @@
     <script src="codemirror/mode/ruby/ruby.js"></script>
     <link rel="stylesheet" href="codemirror/lib/codemirror.css" />
     <script src="firepad.js"></script>
-  	<link rel="stylesheet" href="css/foundation.css" />
-  	<link rel="stylesheet" href="css/game.css" />
+    <script src="js/fpsync.js"></script>
+    <link rel="stylesheet" href="css/foundation.css" />
     <link rel="stylesheet" href="firepad.css" />
-
-  	<script src="js/vendor/custom.modernizr.js"></script>
-
+    <link rel="stylesheet" href="css/game.css" />
+    <script src="js/vendor/custom.modernizr.js"></script>
 </head>
 <body>
     <div id="Title" class="code">
       <p>CodeBattle</p>
     </div>
   <div class="row">
-  		<div id="PlayerDiv" class="large-6 small-12 columns">
+      <div id="PlayerDiv" class="large-6 small-12 columns">
         <div id="firepad1" class="firepadContainer"></div>
       </div>
       <div id="OpponentDiv" class="large-6 small-12 columns">
@@ -36,11 +35,11 @@
   </div>
   <div class="row">
     <div id="OutputDiv" class="large-12 small-12 columns">
-      <div id="PlayerOutput" class="large-6 small-12 columns">
-        Player output
+      <div id="PlayerOutput" class="large-6 small-12 columns">  
+        <div id="console1" class="firepadConsole"></div>
       </div>
       <div id="OpponentOutput" class="large-6 small-12 columns">
-        Opponent output
+        <div id="console2" class="firepadConsole"></div>
       </div>
     </div>
   </div>
