--- a/game.html
+++ b/game.html
@@ -22,8 +22,22 @@
 </head>
 <body>
     <div id="Title" class="code">
-        <p><span class="yellow">Code</span>Battle</p>
+        <span class="yellow">Code</span>Battle
     </div>
+    <div id="">
+      <div id="powerups0" class="large-6 small-12 columns">
+        <ul id="navlist">
+          <li id="active"><a href="#" id="current">Item one</a></li>
+          <li><a href="#">Item two</a></li>
+          <li><a href="#">Item three</a></li>
+          <li><a href="#">Item four</a></li>
+          <li><a href="#">Item five</a></li>
+        </ul>
+      </div>
+      <div id="powerups1" class="large-6 small-12 columns">
+      </div>
+    </div>
+    <div id="FirepadDiv">
         <div id="PlayerDiv" class="large-6 small-12 columns">
             <div id="topbar"></div>
             <div id="firepad1" class="firepadContainer"></div>
@@ -32,13 +46,19 @@
             <div id="topbar"></div>
             <div id="firepad2" class="firepadContainer"></div>
         </div>
-    
+    </div>
         <div id="OutputDiv" class="large-12 small-12 columns">
-            <div id="PlayerOutput" class="large-6 small-12 columns">  
+            <div id="PlayerOutput" class="large-5 small-11 columns">  
                 <div id="console1" class="firepadConsole"></div>
             </div>
-            <div id="OpponentOutput" class="large-6 small-12 columns">
+            <div id="PlayerSubmit" class="large-1 small-1 columns">
+                <a id="submit0" href="#" class="button code">Submit()</a>
+            </div>
+            <div id="OpponentOutput" class="large-5 small-11 columns">
                 <div id="console2" class="firepadConsole"></div>
+            </div>
+            <div id="PlayerSubmit" class="large-1 small-1 columns">
+                <a id="submit1" href="#" class="button code">Submit()</a>
             </div>
         </div>
 
