--- a/game.html
+++ b/game.html
@@ -24,17 +24,16 @@
     <div id="Title" class="code">
         <span class="yellow">Code</span>Battle
     </div>
-    <div id="">
-      <div id="powerups0" class="large-6 small-12 columns">
-        <ul id="navlist">
+    <div id="PowerupDiv">
+      <div id="powerupdiv0" class="large-6 small-12 columns">
+        <ul id="powerups0" class="powerup">
           <li id="active"><a href="#" id="current">Item one</a></li>
-          <li><a href="#">Item two</a></li>
-          <li><a href="#">Item three</a></li>
-          <li><a href="#">Item four</a></li>
-          <li><a href="#">Item five</a></li>
         </ul>
       </div>
-      <div id="powerups1" class="large-6 small-12 columns">
+      <div id="powerupdiv1" class="large-6 small-12 columns">
+          <ul id="powerups1" class="powerup">
+          <li id="active"><a href="#" id="current">Item one</a></li>
+        </ul>
       </div>
     </div>
     <div id="FirepadDiv">
