--- a/game.html
+++ b/game.html
@@ -27,12 +27,10 @@
     <div id="PowerupDiv">
       <div id="powerupdiv0" class="large-6 small-12 columns">
         <ul id="powerups0" class="powerup">
-          <li id="active"><a href="#" id="current">Item one</a></li>
         </ul>
       </div>
       <div id="powerupdiv1" class="large-6 small-12 columns">
-          <ul id="powerups1" class="powerup">
-          <li id="active"><a href="#" id="current">Item one</a></li>
+        <ul id="powerups1" class="powerup">
         </ul>
       </div>
     </div>
@@ -51,13 +49,13 @@
                 <div id="console1" class="firepadConsole"></div>
             </div>
             <div id="PlayerSubmit" class="large-1 small-1 columns">
-                <a id="submit0" href="#" class="button code">Submit()</a>
+                <a id="submit0" href="#" onclick="submitCode()" class="button code">Submit()</a>
             </div>
             <div id="OpponentOutput" class="large-5 small-11 columns">
                 <div id="console2" class="firepadConsole"></div>
             </div>
             <div id="PlayerSubmit" class="large-1 small-1 columns">
-                <a id="submit1" href="#" class="button code">Submit()</a>
+                <a id="submit1" href="#" onclick="submitCode()" class="button code">Submit()</a>
             </div>
         </div>
 
