--- a/game.html
+++ b/game.html
@@ -48,14 +48,14 @@
             <div id="PlayerOutput" class="large-5 small-11 columns">  
                 <div id="console1" class="firepadConsole"></div>
             </div>
-            <div id="PlayerSubmit" class="large-1 small-1 columns">
-                <a id="submit0" href="#" onclick="submitCode()" class="button code">Submit()</a>
+            <div id="PlayerSubmit0" class="large-1 small-1 text-center columns">
+                <a id="submit0" href="#" onclick="submitCode()" class="button"><img src="img/submit.png"></a>
             </div>
             <div id="OpponentOutput" class="large-5 small-11 columns">
                 <div id="console2" class="firepadConsole"></div>
             </div>
-            <div id="PlayerSubmit" class="large-1 small-1 columns">
-                <a id="submit1" href="#" onclick="submitCode()" class="button code">Submit()</a>
+            <div id="PlayerSubmit1" class="large-1 small-1 text-center columns">
+                <a id="submit1" href="#" onclick="submitCode()" class="button"><img src="img/submit.png"></a>
             </div>
         </div>
 
