--- a/game.html
+++ b/game.html
@@ -21,8 +21,13 @@
     <script src="js/vendor/custom.modernizr.js"></script>
 </head>
 <body>
-    <div id="Title" class="code">
-        <span class="yellow">Code</span>Battle
+    <div id="Title" class="large-12 small-12 text-left columns code">
+        <div class="large-6 small-12 text-left columns">
+          <span class="yellow">Code</span>Battle</span>
+        </div>
+        <div id="gameIDDiv" class="large-6 small-12 blue text-right columns">
+          Game ID:<span id="gameID" class="white"></span>
+        </div>
     </div>
     <div id="PowerupDiv">
       <div id="powerupdiv0" class="large-6 small-12 columns">
