--- a/game.html
+++ b/game.html
@@ -23,10 +23,11 @@
 <body>
     <div id="Title" class="large-12 small-12 text-left columns code">
         <div class="large-6 small-12 text-left columns">
-          <span class="yellow">Code</span>Battle</span>
+          <a href="index.html"><span class="yellow">Code</span><span class="white">Battle</span></a>
         </div>
-        <div id="gameIDDiv" class="large-6 small-12 blue text-right columns">
-          Game ID:<span id="gameID" class="white"></span>
+        <div id="gameIDDiv" class="large-6 small-12 text-right columns">
+          <span class="blue">Game ID:<span id="gameID" class="white"></span></span><br>
+          <span id="status" class="purple"></span>
         </div>
     </div>
     <div id="PowerupDiv">
