--- a/game.html
+++ b/game.html
@@ -65,6 +65,18 @@
             </div>
         </div>
 
+        <div id="GameModal" class="reveal-modal">
+          <h2>Awesome. I have it.</h2>
+          <p class="lead">Your couch.  It is mine.</p>
+          <p>Im a cool paragraph that lives inside of an even cooler modal. Wins</p>
+          <a class="close-reveal-modal">&#215;</a>
+        </div>
+    <script>
+        function displayModal() {
+            $('#GameModal').foundation('reveal', 'open');
+        }
+    </script>
+
     <script>
         document.write('<script src=' +
         ('__proto__' in {} ? 'js/vendor/zepto' : 'js/vendor/jquery') +
