--- a/game.html
+++ b/game.html
@@ -66,13 +66,14 @@
     </div>
 
         <div id="GameModal" class="reveal-modal">
-          <h2>Awesome. I have it.</h2>
+          <h2><span id="modalStatus">Awesome. I have it.</span></h2>
           <p class="lead">Your couch.  It is mine.</p>
           <p>Im a cool paragraph that lives inside of an even cooler modal. Wins</p>
           <a class="close-reveal-modal">&#215;</a>
         </div>
     <script>
-        function displayModal() {
+        function displayModal(message) {
+            document.getElementById('modalStatus').innerHTML = message;
             $('#GameModal').foundation('reveal', 'open');
         }
     </script>
