Stop using GET requests to load questions.

--- a/game.html
+++ b/game.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width">
     <title>CodeBattle</title>
     <meta charset="utf-8" />
+    <script src="js/questions.js"></script>
     <script src="https://cdn.firebase.com/v0/firebase.js"></script>
     <script src="codemirror/lib/codemirror.js"></script>
     <script src="codemirror/mode/clike/clike.js"></script>
@@ -51,7 +52,7 @@
         </div>
     </div>
     <div id="OutputDiv" class="large-12 small-12 columns">
-        <div id="PlayerOutput" class="large-5 small-11 columns">  
+        <div id="PlayerOutput" class="large-5 small-11 columns">
             <div id="console1" class="firepadConsole"></div>
         </div>
         <div id="PlayerSubmit0" class="large-1 small-1 text-center columns">
@@ -83,10 +84,10 @@
         ('__proto__' in {} ? 'js/vendor/zepto' : 'js/vendor/jquery') +
         '.js><\/script>')
     </script>
-    
+
     <script src="js/fpsync.js"></script>
     <script src="js/foundation.min.js"></script>
-  
+
     <script>
         $(document).foundation();
     </script>
