--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
   		<meta name="viewport" content="width=device-width">
   	<title>CodeBattle </title>
 
-  
-  	<link rel="stylesheet" href="css/foundation.css">
-  	<link rel="stylesheet" href="css/title.css">
-  	<script src="https://cdn.firebase.com/v0/firebase.js"></script>
-  	<script src="js/vendor/custom.modernizr.js"></script>
+
+    <script src="js/questions.js"></script>
+    <link rel="stylesheet" href="css/foundation.css">
+    <link rel="stylesheet" href="css/title.css">
+    <script src="https://cdn.firebase.com/v0/firebase.js"></script>
+    <script src="js/vendor/custom.modernizr.js"></script>
 
 </head>
 <body>
@@ -49,7 +50,7 @@
 			<a id="GameJoinButton" class="medium yellow button" href="#">JoinGame()</a>
 		</div>
 	</div>
-	
+
 	<script>
 		document.getElementById('GameJoinButton').addEventListener('click', function (event) {
 			event.preventDefault();
@@ -79,9 +80,9 @@
   		('__proto__' in {} ? 'js/vendor/zepto' : 'js/vendor/jquery') +
   		'.js><\/script>')
   	</script>
-  
+
   	<script src="js/foundation.min.js"></script>
-  
+
   	<script>
     	$(document).foundation();
   	</script>
