--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<!--[if IE 8]> 				 <html class="no-js lt-ie9" lang="en" > <![endif]-->
+<!--[if IE 8]>               <html class="no-js lt-ie9" lang="en" > <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js" lang="en" > <!--<![endif]-->
 
 <head>
-		<meta charset="utf-8">
-  		<meta name="viewport" content="width=device-width">
-  	<title>CodeBattle </title>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width">
+    <title>CodeBattle </title>
 
 
     <script src="js/questions.js"></script>
@@ -17,74 +17,79 @@
 </head>
 <body>
 
-	<div id="StartPageDiv" class="row">
-		<div id="GameNameDiv" class="row">
-			<div id="LineNum" class="large-1 small-1 columns">
-				1<br>
-				2<br>
-				3<br>
-				4<br>
-				5<br>
-			</div>
-			<div id="Text" class="large-11 small-1 white columns">
-				<span class="blue">var</span> CodeBattle <span class="magenta">=</span> {}; <br>
-				CodeBattle.Players <span class="magenta">=</span> [<span class="yellow">'You'</span>,<span class="yellow">'Friend'</span>]; <br>
-				CodeBattle.Objective <span class="magenta">=</span> <span class="yellow">'Write code'</span>; <br>
-				CodeBattle.Timed <span class="magenta">=</span> <span class="purple">true</span>; <br>
-			</div>
-		</div>
-		<div class="row">
-			<div id="JoinCodeInput" class="large-6 text-right columns">
-				<select id="LanguageSelector">
-					<option value="python">Python</option>
-					<option value="ruby">Ruby</option>
-					<option value="php">PHP</option>
-				</select>
-			</div>
-			<div id="JoinCodeInput" class="large-6 text-left columns">
-				<input id="JoinCode" type="text" placeholder="Paste game session ID here.">
-			</div>
-		</div>
-		<div id="GameStartDiv" class="row">
-			<a id="GameCreateButton" class="medium blue button" href="game.html">StartGame()</a>
-			<a id="GameJoinButton" class="medium yellow button" href="#">JoinGame()</a>
-		</div>
-	</div>
+    <div id="StartPageDiv" class="row">
+        <div id="GameNameDiv" class="row">
+            <div id="LineNum" class="large-1 small-1 columns">
+                1<br>
+                2<br>
+                3<br>
+                4<br>
+                5<br>
+            </div>
+            <div id="Text" class="large-11 small-1 white columns">
+                <span class="blue">var</span> CodeBattle <span class="magenta">=</span> {}; <br>
+                CodeBattle.Players <span class="magenta">=</span> [<span class="yellow">'You'</span>,<span class="yellow">'Friend'</span>]; <br>
+                CodeBattle.Objective <span class="magenta">=</span> <span class="yellow">'Write code'</span>; <br>
+                CodeBattle.Timed <span class="magenta">=</span> <span class="purple">true</span>; <br>
+            </div>
+        </div>
+        <div class="row">
+            <div id="JoinCodeInput" class="large-6 text-right columns">
+                <select id="LanguageSelector">
+                    <option value="python">Python</option>
+                    <option value="ruby">Ruby</option>
+                    <option value="php">PHP</option>
+                </select>
+            </div>
+            <div id="JoinCodeInput" class="large-6 text-left columns">
+                <input id="JoinCode" type="text" placeholder="Paste game session ID here.">
+            </div>
+        </div>
+        <div id="GameStartDiv" class="row">
+            <a id="GameCreateButton" class="medium blue button" href="game.html">StartGame()</a>
+            <a id="GameJoinButton" class="medium yellow button" href="#">JoinGame()</a>
+        </div>
+    </div>
 
-	<script>
-		document.getElementById('GameJoinButton').addEventListener('click', function (event) {
-			event.preventDefault();
-			document.getElementById('GameCreateButton').style.display = 'none';
-			document.getElementById('JoinCode').style.visibility = 'visible';
-			document.getElementById('GameJoinButton').addEventListener('click', function (event) {
-				var id = document.getElementById('JoinCode').value;
-				document.location.href = "game.html?game=" + id;
-			});
-		});
+    <script>
+        document.getElementById('GameJoinButton').addEventListener('click', function (event) {
+            event.preventDefault();
+            document.getElementById('GameCreateButton').style.display = 'none';
+            document.getElementById('JoinCode').style.visibility = 'visible';
+            document.getElementById('GameJoinButton').addEventListener('click', function (event) {
+                var id = document.getElementById('JoinCode').value;
+                document.location.href = "game.html?game=" + id;
+            });
+        });
 
-		document.getElementById('GameCreateButton').addEventListener('click', function (event) {
-			event.preventDefault();
-			var id = Math.floor((Math.random()*1000000000));
-			var game = Math.floor((Math.random()*5));
-			var lang = document.getElementById('LanguageSelector').value;
-			var f = new Firebase("https://codebattle.firebaseio.com/games/"+id);
-			var q = ["double","square","prime","reverse","sumlist","anagrams"];
-			f.set({language:lang, questions:q}, function() {
-				document.location.href = "game.html?game=" + id;
-			});
-		});
-	</script>
+        document.getElementById('GameCreateButton').addEventListener('click', function (event) {
+            event.preventDefault();
+            var id = Math.floor((Math.random()*1000000000));
+            var game = Math.floor((Math.random()*5));
+            var lang = document.getElementById('LanguageSelector').value;
+            var f = new Firebase("https://codebattle.firebaseio.com/games/"+id);
+            var q = [];
+            for (var key in problems) {
+                if (Math.floor((Math.random()*3)) < 1) {
+                    q.push(key);
+                }
+            }
+            f.set({language:lang, questions:q}, function() {
+                document.location.href = "game.html?game=" + id;
+            });
+        });
+    </script>
 
-  	<script>
-  		document.write('<script src=' +
-  		('__proto__' in {} ? 'js/vendor/zepto' : 'js/vendor/jquery') +
-  		'.js><\/script>')
-  	</script>
+    <script>
+        document.write('<script src=' +
+        ('__proto__' in {} ? 'js/vendor/zepto' : 'js/vendor/jquery') +
+        '.js><\/script>')
+    </script>
 
-  	<script src="js/foundation.min.js"></script>
+    <script src="js/foundation.min.js"></script>
 
-  	<script>
-    	$(document).foundation();
-  	</script>
+    <script>
+        $(document).foundation();
+    </script>
 </body>
 </html>
