--- a/game.html
+++ b/game.html
@@ -78,6 +78,14 @@
     </div>
 
 
+
+    <script type="text/javascript" charset="utf-8" src="js/vendor/jquery.js"></script>
+    <script type="text/javascript" charset="utf-8" src="js/vendor/zepto.js"></script>
+
+
+    <script src="js/fpsync.js"></script>
+    <script src="js/foundation.min.js"></script>
+
     <script>
         function displayModal(isWinner) {
             if (isWinner) {
@@ -98,17 +106,50 @@
                 $('#GameModal').foundation('reveal', 'open');
             }
         }
+        (function($)
+{
+        $.fn.blink = function(options)
+        {
+                var defaults = { delay:500 };
+                var options = $.extend(defaults, options);
+                
+                return this.each(function()
+                {
+                        var obj = $(this);
+                        if (obj.attr("timerid") > 0) return;
+                        var timerid=setInterval(function()
+                        {
+                                if($(obj).css("visibility") == "visible")
+                                {
+                                        $(obj).css('visibility','hidden');
+                                }
+                                else
+                                {
+                                        $(obj).css('visibility','visible');
+                                }
+                        }, options.delay);
+                        obj.attr("timerid", timerid);
+                });
+        }
+        $.fn.unblink = function(options) 
+        {
+                var defaults = { visible:true };
+                var options = $.extend(defaults, options);
+                
+                return this.each(function() 
+                {
+                        var obj = $(this);
+                        if (obj.attr("timerid") > 0) 
+                        {
+                                clearInterval(obj.attr("timerid"));
+                                obj.attr("timerid", 0);
+                                obj.css('visibility', options.visible?'visible':'hidden');
+                        }
+                });
+        }
+}(jQuery))
+
     </script>
-
-    <script>
-        document.write('<script src=' +
-        ('__proto__' in {} ? 'js/vendor/zepto' : 'js/vendor/jquery') +
-        '.js><\/script>')
-    </script>
-
-    <script src="js/fpsync.js"></script>
-    <script src="js/foundation.min.js"></script>
-
     <script>
         $(document).foundation();
     </script>
