--- a/game.html
+++ b/game.html
@@ -9,6 +9,7 @@
     <meta charset="utf-8" />
     <script src="js/questions.js"></script>
     <script src="https://cdn.firebase.com/v0/firebase.js"></script>
+    <script src='https://cdn.firebase.com/v0/firebase-simple-login.js'></script>
     <script src="codemirror/lib/codemirror.js"></script>
     <script src="codemirror/mode/php/php.js"></script>
     <script src="codemirror/mode/python/python.js"></script>
