--- a/game.html
+++ b/game.html
@@ -34,12 +34,12 @@
     <div id="PowerupDiv" class="large-12 small-12 columns">
       <div id="powerupdiv0" class="large-6 small-12 columns">
         <ul id="powerups0" class="powerup">
-            <li style="height:100px;">Powerups:</li>
+            <li style="height:100px; width:1px"></li>
         </ul>
       </div>
       <div id="powerupdiv1" class="large-6 small-12 columns">
         <ul id="powerups1" class="powerup">
-            <li style="height:100px;">Powerups:</li>
+            <li style="height:100px; width:1px"></li>
         </ul>
       </div>
     </div>
