--- a/game.html
+++ b/game.html
@@ -59,7 +59,7 @@
         </div>
         <div id="PlayerSubmit0" class="large-1 small-1 text-center columns">
             <div id="submit0" href="#" onclick="submitCode()" class="button"><img src="img/submit.png"></div>
-            <div id="insult0" href="#" onclick="send_insult()" class="button"><img src="img/fuck.jpg"></div>
+            <div id="insult0" href="#" onclick="send_insult()" class="button"><img src="img/finger.png"></div>
 
         </div>
         <div id="OpponentOutput" class="large-5 small-11 columns">
@@ -67,7 +67,7 @@
         </div>
         <div id="PlayerSubmit1" class="large-1 small-1 text-center columns">
             <div id="submit1" href="#" onclick="submitCode()" class="button"><img src="img/submit.png"></div>
-            <div id="insult0" href="#" onclick="send_insult()" class="button"><img src="img/fuck.jpg"></div>
+            <div id="insult1" href="#" onclick="send_insult()" class="button"><img src="img/finger.png"></div>
         </div>
     </div>
 
