Remove 2nd call to send_insult + submitCode

--- a/game.html
+++ b/game.html
@@ -66,14 +66,14 @@
             <div id="console1" class="firepadConsole"></div>
         </div>
         <div id="PlayerSubmit0" class="large-1 small-1 text-center columns">
-            <div id="button1" href="#" onclick="submitCode()" class="button"></div>
+            <div id="button1" href="#" class="button"></div>
 
         </div>
         <div id="OpponentOutput" class="large-5 small-11 columns">
             <div id="console2" class="firepadConsole"></div>
         </div>
         <div id="PlayerSubmit1" class="large-1 small-1 text-center columns">
-            <div id="button2" href="#" onclick="send_insult()" class="button"></div>
+            <div id="button2" href="#" class="button"></div>
         </div>
     </div>
 
