--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
                 CodeBattle.Timed <span class="magenta">=</span> <span class="purple">true</span>; <br>
             </div>
         </div>
-        <div id="facebookLogin">
-            <a class="btn-auth btn-facebook large" onclick="login()" href="#">
+        <div id="facebookLogin" >
+            <a id="facebookButton" class="btn-auth btn-facebook large" onclick="login()" href="#">
                 <b>Sign in</b> to get started.
             </a>
         </div>
