Added all observer stuff

--- a/game.html
+++ b/game.html
@@ -23,10 +23,17 @@
 </head>
 <body>
     <div id="Title" class="large-12 small-12 text-left columns code">
-        <div class="large-6 small-12 text-left columns">
+        <div id="TitleText" class="large-4 small-12 text-left columns">
           <a href="index.html"><span class="yellow">Code</span><span class="white">Battle</span></a>
         </div>
-        <div id="gameIDDiv" class="large-6 small-12 text-right columns">
+        <div class="large-5 small-12 text-left columns" style="padding-left: 40px;">
+            <div>
+              Observers
+            </div>
+            <ul id="observers">
+            </ul>
+        </div>
+        <div id="gameIDDiv" class="large-3 small-12 text-right columns">
           <span class="blue">Game ID:<span id="gameID" class="white"></span></span><br>
           <span id="status" class="purple"></span>
         </div>
